Use platform in relations